my-dashboard/spring-db-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: spring-db-app
  name: spring-db-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spring-db-app
  template:
    metadata:
      labels:
        io.kompose.network/traffic-management-default: "true"
        io.kompose.service: spring-db-app
    spec:
      containers:
        - image: leomarzoli/spring_db_tcm:version1
          name: spring-db-app
          ports:
            - containerPort: 9085
              hostPort: 9085
              protocol: TCP
      restartPolicy: Always
