my-dashboard/user-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: user-db
  name: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-db
  template:
    metadata:
      labels:
        io.kompose.network/traffic-management-default: "true"
        io.kompose.service: user-db
    spec:
      containers:
        - image: fpirazzoli/sap_spe_db:latest
          name: user-db
          ports:
            - containerPort: 8082
              hostPort: 8082
              protocol: TCP
            - containerPort: 9092
              hostPort: 9092
              protocol: TCP
      restartPolicy: Always
