my-dashboard/vue-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Xmachines\IdeaProjects\Traffic-Management\kompose-windows-amd64.exe -f compose.yml convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: vue-app
  name: vue-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vue-app
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Xmachines\IdeaProjects\Traffic-Management\kompose-windows-amd64.exe -f compose.yml convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/traffic-management-default: "true"
        io.kompose.service: vue-app
    spec:
      containers:
        - image: leomarzoli/traffic_management_system:latest
          name: vue-app
          ports:
            - containerPort: 80
              hostPort: 8080
              protocol: TCP
      restartPolicy: Always
