my-dashboard/intersection-agents-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: intersection-agents
  name: intersection-agents
spec:
  ports:
    - name: "9080"
      port: 9080
      targetPort: 9080
  selector:
    io.kompose.service: intersection-agents
