my-dashboard/spring-db-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: spring-db-app
  name: spring-db-app
spec:
  clusterIP: 10.96.35.79
  ports:
    - name: "9085"
      port: 9085
      targetPort: 9085
  selector:
    io.kompose.service: spring-db-app
  type: LoadBalancer  # Aggiungi questa riga per specificare il tipo NodePort
