my-dashboard/user-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\Xmachines\IdeaProjects\Traffic-Management\kompose-windows-amd64.exe -f compose.yml convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: user-db
  name: user-db
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    io.kompose.service: user-db
