my-dashboard/vue-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: vue-app
  name: vue-app
spec:
  clusterIP: 10.105.157.100
  externalIPs:
    - 192.01.05.01
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
      nodePort: 30000  # Sostituisci con la porta del nodo desiderata
  selector:
    io.kompose.service: vue-app
  type: NodePort  # Aggiungi questa riga per specificare il tipo NodePort
